ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: hatchet-ingress
  namespace: hatchet
spec:
  ingressClassName: traefik
  rules:
    - host: hatchet-stack.local
      http:
        paths:
          - path: /api/
            pathType: ImplementationSpecific
            backend:
              service:
                name: hatchet-stack-api
                port:
                  number: 8080
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: hatchet-stack-frontend
                port:
                  number: 8080
